<resources>
    <string name="app_name">Layout Practice One</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">Linkedin</string>
    <string name="sobre">Sobre essa trilha</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
</resources>